fixed distorted images

--- a/app/assets/stylesheets/place.css
+++ b/app/assets/stylesheets/place.css
@@ -40,7 +40,7 @@
 }
 
 #place-photo {
-  height: 210px;
+  height: 180px;
 }
 
 #place-photo img {
